# ai-tour-guide

./: .gitignore  AGENTS.md  README.md  SETUP.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini  ruff.toml
backend/prompts/personas/: foodie.yaml  gossip_auntie.yaml  history_uncle.yaml  kid_sister.yaml  story_brother.yaml
backend/src/tour_guide/: config.py  log_events.py  logging_config.py  main.py
backend/src/tour_guide/api/: __init__.py  health.py  narration.py  poi.py  qa.py  sse.py
backend/src/tour_guide/cache/: __init__.py  narration_cache.py  poi_cache.py
backend/src/tour_guide/clients/: __init__.py  google_places.py  nominatim.py  overpass.py  (+1 more)
backend/tests/: conftest.py
backend/tests/integration/: test_app_factory.py  test_health_api.py  test_narration_api.py  test_narration_service.py  test_overpass_client.py  test_poi_api.py  test_poi_service.py  test_qa_api.py  test_wikipedia_client.py
backend/tests/smoke/: test_real_providers.py
backend/tests/unit/: test_confidence.py  test_config.py  test_edge_tts_adapter.py  test_foodie_filter.py  test_google_places_client.py  test_llm_provider.py  test_logging_config.py  test_narration_cache.py  test_narration_service.py  test_narration_skip.py  test_nominatim_client.py  test_persona_loader.py  test_poi_cache.py  test_poi_filter.py  test_poi_models.py  test_poi_selector.py  test_prompt_builder.py  test_qa_service.py  test_sentence_splitter.py  test_smoke.py  test_sse.py  test_stt_provider.py  test_tts_provider.py  test_wikipedia_client.py  test_wikipedia_resolver.py
(+245 files in other folders)
